--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,13 @@
+ul li {
+    border: 1px grey; 
+    list-style: none;
+    padding-left: 5px;
+}
+input {
+    border: none;
+    width: 75%;
+}
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.bi {
+    float: right;
+}
